tests/snapshots/cli__list@completely_flat_toplevel.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/completely_flat_toplevel.flake.nix"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
· crane - github:ipetkov/crane
     flake-utils => flake-utils
     nixpkgs => nixpkgs
     rust-overlay => rust-overlay
· flake-utelinos - github:numtide/flake-utils
· nixpkgs - github:nixos/nixpkgs/nixos-unstable
· rust-overlay - github:oxalica/rust-overlay
     flake-utils => flake-utils
     nixpkgs => nixpkgs

----- stderr -----
