tests/snapshots/cli__list@deeply_nested_inputs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/deeply_nested_inputs.flake.nix"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
· disko - github:nix-community/disko
     nixpkgs => nixpkgs
· nixpkgs - github:nixos/nixpkgs/nixos-unstable

----- stderr -----
