tests/snapshots/cli__list@first_nested_node.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/first_nested_node.flake.nix"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
· flake-compat - github:edolstra/flake-compat
· naersk - github:nix-community/naersk/master
     nixpkgs => nixpkgs
· nixpkgs - github:NixOS/nixpkgs/nixpkgs-unstable
· utils - github:numtide/flake-utils

----- stderr -----
