tests/snapshots/cli__list@flat_nested_flat.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_nested_flat.flake.nix"
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
· flake-utils - github:numtide/flake-utils/master
· nixpkgs - github:NixOS/nixpkgs/nixos-unstable
· poetry2nix - github:nix-community/poetry2nix/master
     flake-utils => flake-utils
     nixpkgs => nixpkgs

----- stderr -----
